--- a/app/src/main/res/drawable/drawable_color_green.xml
+++ b/app/src/main/res/drawable/drawable_color_green.xml
@@ -3,6 +3,6 @@
     xmlns:android="http://schemas.android.com/apk/res/android" >
     <gradient
         android:angle="135"
-        android:endColor="@color/main_green_color"
-        android:startColor="@color/main_green_color"/>
+        android:endColor="#55A5CE"
+        android:startColor="@color/colorPrimary"/>
 </shape>
