--- a/app/src/main/res/layout/bottom_sheet_fragment_list_money_manager.xml
+++ b/app/src/main/res/layout/bottom_sheet_fragment_list_money_manager.xml
@@ -24,7 +24,7 @@
                 android:id="@+id/textTitle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Today"
+                android:text="Details"
                 android:textSize="16sp"
                 android:fontFamily="@font/poppins_bold"
                 android:layout_centerInParent="true"
