--- a/app/src/main/res/layout/activity_change_pin.xml
+++ b/app/src/main/res/layout/activity_change_pin.xml
@@ -31,7 +31,7 @@
         android:layout_marginBottom="10dp"
         android:fontFamily="@font/work_sans_semibold"
         android:textColor="@color/textColorPrimary"
-        android:text="@string/secure_account"
+        android:text="@string/secure_pin"
         android:textSize="14sp" />
 
     <me.muhammadfaisal.mycarta.helper.PinEditText
@@ -53,7 +53,7 @@
         android:layout_marginTop="20dp"
         android:background="@drawable/button_primary"
         android:fontFamily="@font/work_sans_semibold"
-        android:text="Change Password"
+        android:text="Change PIN"
         android:textColor="@color/white" />
 
 </LinearLayout>
