--- a/app/src/main/res/layout/bottom_sheet_fragment_about_app.xml
+++ b/app/src/main/res/layout/bottom_sheet_fragment_about_app.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
     android:background="@drawable/top_rounded"
+    android:orientation="vertical"
     tools:context=".home.fragment.account.bottom_sheet.AboutAppBottomSheetFragment">
 
     <androidx.appcompat.widget.Toolbar
@@ -12,31 +13,161 @@
         android:layout_height="?attr/actionBarSize">
 
         <RelativeLayout
-            android:layout_marginEnd="20dp"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            android:layout_marginEnd="20dp">
 
             <ImageView
-                android:foreground="?attr/selectableItemBackground"
                 android:id="@+id/icClose"
-                android:layout_alignParentStart="true"
-                android:layout_centerInParent="true"
                 android:layout_width="24dp"
                 android:layout_height="24dp"
-                android:src="@drawable/ic_close"/>
+                android:layout_alignParentStart="true"
+                android:layout_centerInParent="true"
+                android:foreground="?attr/selectableItemBackground"
+                android:src="@drawable/ic_close" />
 
             <TextView
                 android:id="@+id/title"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/about_app"
-                android:textSize="16sp"
-                android:fontFamily="@font/poppins_bold"
                 android:layout_centerInParent="true"
-                android:textColor="@color/buttonPrimary"/>
+                android:fontFamily="@font/poppins_bold"
+                android:text="@string/about_app"
+                android:textColor="@color/buttonPrimary"
+                android:textSize="16sp" />
 
         </RelativeLayout>
 
     </androidx.appcompat.widget.Toolbar>
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@color/backgroundGrayPrimary">
+
+        <LinearLayout
+            android:id="@+id/linearBottom"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/linearTop"
+            android:layout_marginBottom="20dp"
+            android:orientation="vertical">
+
+            <androidx.cardview.widget.CardView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="16dp"
+                app:cardCornerRadius="8dp">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical"
+                    android:padding="8dp">
+
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:drawableStart="@drawable/ic_info_gray"
+                        android:fontFamily="@font/poppins_bold"
+                        android:gravity="center"
+                        android:padding="4dp"
+                        android:text="@string/app_name"
+                        android:textColor="@color/grayPrimary" />
+
+                    <View
+                        android:layout_width="match_parent"
+                        android:layout_height="1dp"
+                        android:layout_margin="4dp"
+                        android:background="@color/grayPrimary" />
+
+                    <TextView
+                        android:id="@+id/textVersionApp"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:drawableStart="@drawable/ic_config"
+                        android:fontFamily="@font/poppins_bold"
+                        android:foreground="?attr/selectableItemBackground"
+                        android:gravity="center"
+                        android:padding="4dp"
+                        android:text="@string/app_name"
+                        android:textColor="@color/grayPrimary" />
+
+                </LinearLayout>
+
+            </androidx.cardview.widget.CardView>
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/linearTop"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentTop="true"
+            android:layout_marginTop="20dp"
+            android:orientation="vertical">
+
+            <androidx.coordinatorlayout.widget.CoordinatorLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <de.hdodenhof.circleimageview.CircleImageView
+                    android:layout_width="120dp"
+                    android:layout_height="120dp"
+                    android:layout_gravity="top|center"
+                    android:elevation="4dp"
+                    android:src="@drawable/bg_mountain" />
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="40dp"
+                    android:orientation="vertical">
+
+                    <androidx.cardview.widget.CardView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_margin="16dp"
+                        app:cardCornerRadius="8dp">
+
+                        <LinearLayout
+                            android:layout_marginTop="60dp"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:orientation="vertical">
+
+                            <TextView
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:layout_margin="16dp"
+                                android:fontFamily="@font/lato_light"
+                                android:text="@string/about_mycarta" />
+
+
+                        </LinearLayout>
+
+
+                    </androidx.cardview.widget.CardView>
+
+                </LinearLayout>
+
+
+            </androidx.coordinatorlayout.widget.CoordinatorLayout>
+
+
+        </LinearLayout>
+
+
+        <com.airbnb.lottie.LottieAnimationView
+            android:id="@+id/lottie"
+            android:layout_width="match_parent"
+            android:layout_height="460dp"
+            android:layout_centerInParent="true"
+            android:visibility="gone"
+            app:lottie_autoPlay="true"
+            app:lottie_fileName="surprise.json"
+            app:lottie_scale="400" />
+
+    </RelativeLayout>
 
 </LinearLayout>
