--- a/app/src/main/res/layout/fragment_money_manager.xml
+++ b/app/src/main/res/layout/fragment_money_manager.xml
@@ -172,6 +172,22 @@
                 android:layout_width="match_parent"
                 android:layout_height="240dp"/>
 
+
+            <TextView
+                android:layout_marginTop="20dp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Graphic"
+                android:textSize="18sp"
+                android:textColor="@color/white"
+                android:fontFamily="@font/poppins_bold"/>
+
+            <lecho.lib.hellocharts.view.LineChartView
+                android:layout_marginBottom="40dp"
+                android:id="@+id/chartLine"
+                android:layout_width="match_parent"
+                android:layout_height="240dp"/>
+
         </LinearLayout>
 
     </androidx.core.widget.NestedScrollView>
