--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -22,4 +22,5 @@
     <color name="buttonPay">#4CAF50</color>
     <color name="skyBlue">#5399D3</color>
     <color name="darkGray">#707883</color>
+    <color name="darkGreen">#045E66</color>
 </resources>
