--- a/app/src/main/res/layout/activity_card_pay.xml
+++ b/app/src/main/res/layout/activity_card_pay.xml
@@ -30,7 +30,7 @@
                 android:foreground="?attr/selectableItemBackground"
                 android:id="@+id/textBarcode"
                 android:text="Barcode"
-                android:textColor="@color/colorPrimary"
+                android:textColor="#000"
                 android:fontFamily="@font/poppins_bold"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
