--- a/app/src/main/res/layout/activity_welcome.xml
+++ b/app/src/main/res/layout/activity_welcome.xml
@@ -69,7 +69,7 @@
             android:gravity="center"
             android:layout_height="wrap_content"
             android:fontFamily="@font/work_sans_semibold"
-            android:text="@string/fui_terms_of_service"
+            android:text="Terms of service"
             android:textColor="@color/grayPrimary" />
     </LinearLayout>
 
