--- a/app/src/main/res/layout/bottom_sheet_fragment_about_app.xml
+++ b/app/src/main/res/layout/bottom_sheet_fragment_about_app.xml
@@ -116,7 +116,7 @@
                     android:layout_height="120dp"
                     android:layout_gravity="top|center"
                     android:elevation="4dp"
-                    android:src="@drawable/bg_mountain" />
+                    android:src="@mipmap/main_icon" />
 
                 <LinearLayout
                     android:layout_width="match_parent"
