--- a/app/src/main/res/layout/item_article.xml
+++ b/app/src/main/res/layout/item_article.xml
@@ -4,7 +4,7 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:background="@color/backgroundGrayPrimary"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content">
 
     <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -18,18 +18,21 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal">
+            android:orientation="vertical">
 
             <ImageView
+                android:transitionName="image_article"
+                android:background="#000"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:scaleType="centerCrop"
+                android:layout_height="120dp"
                 android:src="@mipmap/ic_launcher"
-                android:id="@+id/Icon"
-                android:layout_margin="5dp"
-                android:layout_weight="9"
+                android:id="@+id/imageFeature"
                 android:layout_gravity="center_vertical"/>
 
             <LinearLayout
+                android:padding="8dp"
+                android:background="@drawable/top_rounded"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
@@ -42,20 +45,12 @@
                     android:layout_height="wrap_content"
                     android:gravity="start"
                     android:text="Loading..."
+                    android:maxLines="1"
+                    android:ellipsize="end"
                     android:id="@+id/textTitle"
+                    android:textSize="16sp"
                     android:fontFamily="@font/roboto_bold"
                     android:layout_marginBottom="5dp"/>
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:gravity="start"
-                    android:id="@+id/textSubtitle"
-                    android:text="Loading..."
-                    android:fontFamily="@font/roboto"
-                    android:padding="5dp"
-                    android:layout_marginBottom="5dp"
-                    android:maxLines="5"
-                    android:lineSpacingExtra="2dp"/>
 
             </LinearLayout>
 
