--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -38,16 +38,6 @@
             android:textColor="@color/darkGray"
             android:textSize="18sp" />
 
-        <ImageView
-            android:id="@+id/imageSearch"
-            android:layout_width="24dp"
-            android:layout_height="24dp"
-            android:layout_alignParentEnd="true"
-            android:layout_centerInParent="true"
-            android:rotation="90"
-            android:src="@drawable/ic_more"
-            android:tint="@color/black" />
-
     </RelativeLayout>
 
     <RelativeLayout
@@ -263,6 +253,7 @@
                 android:background="@color/grayPrimary"/>
 
             <RelativeLayout
+                android:onClick="privacyPolicy"
                 android:layout_width="match_parent"
                 android:layout_height="?attr/actionBarSize"
                 android:background="@color/white"
